2005-07-05  cctsim  <cctsim@yahoo.co.uk>

	* strings/dec2base.m: Don't remove all leading zeros if result is zero.

2005-07-05  John W. Eaton  <jwe@octave.org>

	* strings/findstr.m: Return [] for no matches.

2005-06-17  Keith Goodman  <kwgoodman@gmail.com>

	* miscellaneous/tic.m: Fix doc string.

2005-06-15  John W. Eaton  <jwe@octave.org>

	* polynomial/polyfit.m: Force return value to be a row vector.

2005-06-15  Tom Holroyd  <tomh@kurage.nimh.nih.gov>

	* general/isequal.m: Correct nargin check.

2005-06-14  John W. Eaton  <jwe@octave.org>

	* general/isvector.m: Handle N-d arrays.
	From Bill Denney <denney@seas.upenn.edu>.

2005-06-02  Ben Barrowes  <barrowes@alum.mit.edu>

	* plot/meshgrid.m: Handle 3 input arguments.

2005-06-02  Paul Kienzle  <pkienzle@users.sf.net>

	* signal/freqz.m: Use correct calculations when given a vector of
	frequencies.  Improve accuracy of returned frequency vector.
	Improve speed for medium length filters (at a slight cost for slow
	filters).  Add test cases.

2005-05-27  "Dmitri A. Sergatskov"  <dasergatskov@gmail.com>

	* plot/loglog.m: Fix set commands.

2005-05-25  John W. Eaton  <jwe@octave.org>

	* plot/sombrero.m: Default n to 41 if nargin == 0.

2005-05-24  John W. Eaton  <jwe@octave.org>

	* statistics/tests/anova.m: Use mean (y(:)) to compute total_mean.

	* strings/strncmp.m: New file, from Tom Holroyd
	<tomh@kurage.nimh.nih.gov>.

	* strings/strcmp.m: Return logical values in all cases.

2005-05-23  John W. Eaton  <jwe@octave.org>

	* plot/orient.m: New file.  Adapt to Octave coding style.
	Texinfoize doc string.

	* plot/print.m: New file.  Adapt to Octave coding style. Include
	PKG_ADD command.  Use set terminal consistently	throughout.  Use
	set terminal push/pop and unconditionally set output to screen
	when done to avoid requiring gget.  Use a cell array for dev_list
	and cellidx to search for items in the list.  Delete local
	variable endl.  Don't set and restore automatic_replot.  Use {}